# promptmaster

./: BUILD_KDP_PDF.md  PROMPTMASTER_KDP_MANUSCRIPT.md  README.md  README_PROMPTMASTER.md  cursorprogress1.md  cursorprogress2.md  index.html  promptmaster.json  promptmaster_livebook_volume2.md  pyproject.toml
assets/: app.js  style.css
book/assets/: app.js
docs/: index.html
docs/assets/: style.css
promptmaster_training/: __init__.py  cli.py  totem_engine.py
promptmaster_training/drills/: __init__.py  run_kernel_drill.py
promptmaster_training/intergrations/: CLAUDE_PROJECT.md  CURSOR_RULES.fragment.md  GENERIC_LLM_BOOTSTRAP.md
promptmaster_training/prompts/: UNIVERSAL_TOTEM_V2_SYSTEM.md
promptmaster_training/scrits/: train_all_nodes.ps1  train_all_nodes.sh
scripts/: build_kdp_manuscript.py  casebook_fragment.md  extended_primer.md  kernel_depth_data.py
